--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website new</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>
+            my simple website</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, deserunt! Mollitia facilis aut corporis qui nulla, aliquam quae atque deserunt velit ut officiis numquam consectetur. Eaque quibusdam pariatur iure ipsum.</p> 
+    </div>
 </body>
 </html>
