added 2nd and 3rd simple website

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
             my simple website</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, deserunt! Mollitia facilis aut corporis qui nulla, aliquam quae atque deserunt velit ut officiis numquam consectetur. Eaque quibusdam pariatur iure ipsum.</p> 
     </div>
+    <div>
+        <h3>
+            my simple website</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, deserunt! Mollitia facilis aut corporis qui nulla, aliquam quae atque deserunt velit ut officiis numquam consectetur. Eaque quibusdam pariatur iure ipsum.</p> 
+    </div>
+    <div>
+        <h3>
+            my simple website</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, deserunt! Mollitia facilis aut corporis qui nulla, aliquam quae atque deserunt velit ut officiis numquam consectetur. Eaque quibusdam pariatur iure ipsum.</p> 
+    </div>
 </body>
 </html>
